--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,15 @@ p {
 
 * {
   font-variant: small-caps;
-  background: black;
+  background: lightblue;
   color: white;
+}
+
+.kitty{
+  padding-top: 85px;
+  padding-bottom: 85px;
+}
+.img-kitty{
+  border: 1px rgb(255,255,255) solid;
 }
 
